--- a/Atividades_Js/package.json
+++ b/Atividades_Js/package.json
@@ -6,7 +6,8 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.1.1"
   },
   "jest": {
     "testEnvironment": "jsdom"
