--- a/Atividades_Js/package.json
+++ b/Atividades_Js/package.json
@@ -5,15 +5,27 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^24.1.1"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/dom": "^6.4.8",
+    "@testing-library/jest-dom": "^6.4.8",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0"
   },
   "jest": {
-    "testEnvironment": "jsdom"
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@testing-library).+\\.js$"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setupTests.js"
+    ]
   },
-  "dependencies": {
-    "node": "^22.6.0",
-    "punycode": "^2.3.1"
-  }
+  "babel": {"presets": ["@babel/preset-env", "@babel/preset-react"]}
+  
 }
