--- a/Atividades_Js/package.json
+++ b/Atividades_Js/package.json
@@ -8,8 +8,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
-    "@testing-library/dom": "^6.4.8",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0"
@@ -21,11 +22,13 @@
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
-    "testEnvironment": "jest-environment-jsdom",
-    "setupFilesAfterEnv": [
-      "<rootDir>/tests/setupTests.js"
-    ]
+    "testEnvironment": "jest-environment-jsdom"
   },
-  "babel": {"presets": ["@babel/preset-env", "@babel/preset-react"]}
-  
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  }
 }
+
